---------------------------------------------------------------------------------------------------
Version: 4.1.3
Date: 2020.12.xx
  Bugfixes:
    - Rewrote autoplace removal into a whitelist of what to keep
    - Finally fixes stuff slipping through with certain mods
---------------------------------------------------------------------------------------------------
Version: 4.1.2
Date: 2020.12.02
  Features:
    - More Py compat: Added extractions for natural gas (tier 1) and saline water (tier 4)
  Changes:
    - Moved Py´s tar extraction down to tier 1
  Bugfixes:
    - Fixed that infinite omnite´s autoplace was missing when playing without Angel´s
    - Fixed that bitumen seeps were not properly removed with Py
---------------------------------------------------------------------------------------------------
Version: 4.1.1
Date: 2020.11.26
  Bugfixes:
    - Fixed non HR omni-furnace animation height
---------------------------------------------------------------------------------------------------
Version: 4.1.0
Date: 2020.11.26
  Info:
    - Updated for Factorio version 1.1.0
---------------------------------------------------------------------------------------------------
Version: 4.0.3
Date: 2020.10.04
  Changes:
    - Internal cleanup of omnic water extractions
  Bugfixes:
    - Fixed basic omnitraction recipes not inlcuding crushed stone outputs in their description
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: 2020.08.31
  Features:
    - Basic omnitraction recipes now have proper icons and locales
    - Omnitraction recipes now show their result as floating point value in their description
  Changes:
    - Improved splitting between impure omnitraction recipes to have more even distribution.
    - Renamed technology "omnitractor-electric-x" to "omnitech-omnitractor-electric-x"
    - Renamed technology "base-impure-extraction" to "omnitech-base-impure-extraction"